--- a/GIS_2.ipynb
+++ b/GIS_2.ipynb
@@ -53,9 +53,9 @@
     "        return False\n",
     "    if sorted(s[:-1])[0] < 0: # Anzahl der Personen kann nirgends negativ sein\n",
     "        return False \n",
-    "    if 0 < s[0] < s[1]:  # Missionäre in der Unterzahl links\n",
+    "    if 0 < s[0] < s[1]:  # Missionare in der Unterzahl links\n",
     "        return False\n",
-    "    if 0 < s[2] < s[3]:  # Missionäre in der Unterzahl rechts\n",
+    "    if 0 < s[2] < s[3]:  # Missionare in der Unterzahl rechts\n",
     "        return False\n",
     "    return True"
    ]
@@ -93,7 +93,7 @@
     "n = 3  # Anzahl der Missionäre bzw. Kannibale\n",
     "\n",
     "# Start- und Zielzustaende\n",
-    "s_start = [n, n, 0, 0, 0]   # [Missionaere links, Kannibale links, Missionaere rechts, Kannibale rechts, Bootsposition(L\\R)]\n",
+    "s_start = [n, n, 0, 0, 0]   # [Missionare links, Kannibale links, Missionare rechts, Kannibale rechts, Bootsposition(L\\R)]\n",
     "s_goal =  [0, 0, n, n, 1]\n",
     "\n",
     "# Aktionsmenge\n",
