--- a/Uebung_02.ipynb
+++ b/Uebung_02.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: emoji in c:\\users\\clemens\\scoop\\persist\\python\\lib\\site-packages (1.7.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install emoji\n",
+    "%pip install emoji\n",
     "import emoji"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +48,12 @@
     "        l += c\n",
     "    for i in range(2*n - (s[2]+s[3])):\n",
     "        l += t\n",
-    "    print(emoji.emojize(l, use_aliases=True))"
+    "    print(emoji.emojize(l, language='alias'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bf_search(s_start, s_goal, A):  # Breitensuche in dem Zustandsraum. Der Algorithmus ist mit dem in der Übung 1 Aufgabe 2 identisch.\n",
+    "def bf_search(s_start, s_goal, A):  # Breitensuche in dem Zustandsraum.\n",
     "    visited = []\n",
     "    queue = [(s_start, [])]\n",
     "    while len(queue) > 0:\n",
@@ -80,22 +89,15 @@
     "                    return a_seq_n\n",
     "                if not s_n in visited:\n",
     "                    queue.append((s_n, a_seq_n))\n",
-    "    print('Keine Lösung!')\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 3  # Anzahl der Missionäre bzw. Kannibale\n",
-    "\n",
-    "# Start- und Zielzustaende\n",
-    "s_start = [n, n, 0, 0, 0]   # [Missionare links, Kannibale links, Missionare rechts, Kannibale rechts, Bootsposition(L\\R)]\n",
-    "s_goal =  [0, 0, n, n, 1]\n",
-    "\n",
     "# Aktionsmenge\n",
     "A = [\n",
     "    # Hinfahrten\n",
@@ -115,14 +117,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_solution(n): # Anzahl der Missionare bzw. Kannibale\n",
+    "    # Start- und Zielzustaende\n",
+    "    s_start = [n, n, 0, 0, 0]   # [Missionare links, Kannibale links, Missionare rechts, Kannibale rechts, Bootsposition(L\\R)]\n",
+    "    s_goal =  [0, 0, n, n, 1]\n",
+    "\n",
+    "    res = bf_search(s_start, s_goal, A)  # Anwendung der Breitensuche\n",
+    "    if res is not None:  # Visualisierung der Zustände, falls das Packet Emoji vorhanden ist\n",
+    "        print(f\"Für das Problem mit n = {n} sind mindestens {len(res)} Fahrten notwendig.\")\n",
+    "        s = s_start\n",
+    "        print_state(s)\n",
+    "        for r in res:\n",
+    "            a = A[r]\n",
+    "            s = [s_ + a_ for s_, a_ in zip(s, a)]\n",
+    "            print_state(s)\n",
+    "    else:\n",
+    "        print(f\"Für das Problem mit n = {n} gibt es keine Lösung!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Für das Problem mit n = 3 sind mindestens 11 Fahrt(en) notwendig.\n",
+      "Für das Problem mit n = 2 sind mindestens 5 Fahrten notwendig.\n",
+      "😇😇😡😡🚤                         🌴🌴🌴🌴\n",
+      "😇😇🌵🌵                         🚤😡😡🌴🌴\n",
+      "😇😇😡🌵🚤                         😡🌴🌴🌴\n",
+      "😡🌵🌵🌵                         🚤😇😇😡🌴\n",
+      "😇😡🌵🌵🚤                         😇😡🌴🌴\n",
+      "🌵🌵🌵🌵                         🚤😇😇😡😡\n",
+      "Für das Problem mit n = 3 sind mindestens 11 Fahrten notwendig.\n",
       "😇😇😇😡😡😡🚤                         🌴🌴🌴🌴🌴🌴\n",
       "😇😇😇😡🌵🌵                         🚤😡😡🌴🌴🌴🌴\n",
       "😇😇😇😡😡🌵🚤                         😡🌴🌴🌴🌴🌴\n",
@@ -134,34 +167,32 @@
       "😡😡😡🌵🌵🌵🚤                         😇😇😇🌴🌴🌴\n",
       "😡🌵🌵🌵🌵🌵                         🚤😇😇😇😡😡🌴\n",
       "😇😡🌵🌵🌵🌵🚤                         😇😇😡😡🌴🌴\n",
-      "🌵🌵🌵🌵🌵🌵                         🚤😇😇😇😡😡😡\n"
+      "🌵🌵🌵🌵🌵🌵                         🚤😇😇😇😡😡😡\n",
+      "Für das Problem mit n = 4 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 5 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 6 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 7 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 8 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 9 gibt es keine Lösung!\n",
+      "...\n"
      ]
     }
    ],
    "source": [
-    "res = bf_search(s_start, s_goal, A)  # Anwendung der Breitensuche\n",
-    "if not res is None:  # Visualisierung der Zustände, falls das Packet Emoji vorhanden ist\n",
-    "    print('Für das Problem mit n = {} sind mindestens {} Fahrt(en) notwendig.'.format(n, len(res)))\n",
-    "    s = s_start\n",
-    "    print_state(s)\n",
-    "    for r in res:\n",
-    "        a = A[r]\n",
-    "        s = [s_ + a_ for s_, a_ in zip(s, a)]\n",
-    "        print_state(s)"
+    "for n in range(2, 10):\n",
+    "    show_solution(n)\n",
+    "print(\"...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aca2a733a2af1563b00c07cd1c761689cce58e2495168a5af8813550b79b034f"
+  },
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
