--- a/Uebung_02.ipynb
+++ b/Uebung_02.ipynb
@@ -2,18 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: emoji in c:\\users\\clemens\\scoop\\persist\\python\\lib\\site-packages (1.7.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "%pip install emoji\n",
     "import emoji"
@@ -141,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,12 +167,102 @@
       "Für das Problem mit n = 7 gibt es keine Lösung!\n",
       "Für das Problem mit n = 8 gibt es keine Lösung!\n",
       "Für das Problem mit n = 9 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 10 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 11 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 12 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 13 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 14 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 15 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 16 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 17 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 18 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 19 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 20 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 21 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 22 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 23 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 24 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 25 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 26 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 27 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 28 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 29 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 30 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 31 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 32 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 33 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 34 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 35 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 36 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 37 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 38 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 39 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 40 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 41 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 42 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 43 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 44 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 45 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 46 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 47 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 48 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 49 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 50 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 51 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 52 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 53 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 54 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 55 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 56 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 57 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 58 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 59 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 60 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 61 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 62 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 63 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 64 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 65 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 66 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 67 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 68 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 69 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 70 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 71 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 72 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 73 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 74 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 75 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 76 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 77 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 78 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 79 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 80 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 81 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 82 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 83 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 84 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 85 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 86 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 87 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 88 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 89 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 90 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 91 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 92 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 93 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 94 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 95 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 96 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 97 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 98 gibt es keine Lösung!\n",
+      "Für das Problem mit n = 99 gibt es keine Lösung!\n",
       "...\n"
      ]
     }
    ],
    "source": [
-    "for n in range(2, 10):\n",
+    "for n in range(2, 100):\n",
     "    show_solution(n)\n",
     "print(\"...\")"
    ]
@@ -190,7 +273,7 @@
    "hash": "aca2a733a2af1563b00c07cd1c761689cce58e2495168a5af8813550b79b034f"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
